samples/_failures_safe/1761335953_a07728_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59e292c5.c: In function ‘main’:
./samples/SAFE/__tmp_59e292c5.c:164:20: error: missing terminating " character
  164 |             printf("
      |                    ^
./samples/SAFE/__tmp_59e292c5.c:164:13: error: expected expression at end of input
  164 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_59e292c5.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59e292c5.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59e292c5.c:164:13: error: expected declaration or statement at end of input
